...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nothing_found_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/fantasy_fitness_gray"
        android:maxHeight="350dp"
        android:visibility="visible"
...
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/fantasy_fitness_gray"
        android:maxHeight="350dp"
        android:visibility="visible"
...
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/quests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/fantasy_fitness_gray"
        android:contentDescription="@string/quests"
...
