...
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="204dp"
                    android:text="test"
                    app:layout_constraintBottom_toTopOf="@+id/inn_button"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView"
...
